second page added

--- a/templates/page2.hbs
+++ b/templates/page2.hbs
@@ -22,8 +22,8 @@
     .right-side {
       width: 30em;
       height: 30em;
-      background: #d0e64c;
-      border-radius: 50%;
+      background: #e64cd9;
+      border-radius: 13%;
       position: absolute;
       top: 10%;
       right: 5%;
@@ -32,11 +32,10 @@
 </head>
 <body>
   <div class="left-side">
-    <h1 class="title">This web app was built with RUST</h1>
-    <p class="sub-title">Hello from {{first_name}} {{last_name}}😊</p>
-    <a href="page2">Second page here</a>
+    <h1 class="title">{{title}}</h1>
+    <p class="sub-title">{{sub_title}}</p>
+    <a href="../">Back</a>
   </div>
   <div class="right-side">
-    <div class="round-image"></div>
   </div>
 </body>
